Fix sign out spacing.

--- a/client/themes/bracket-plus/scss/app.scss
+++ b/client/themes/bracket-plus/scss/app.scss
@@ -225,12 +225,13 @@
 }
 
 .user-profile-nav {
-  margin: 0;
+  margin: 6px 0;
   font-size: 13px;
 
   a {
-    display: block;
-    padding: 7px 10px;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 1rem;
     @include border-radius(2px);
     @include transition($transition-base);
 
@@ -246,9 +247,7 @@
     line-height: 0;
     text-align: center;
     font-size: 20px;
-    position: relative;
     color: theme-color('info');
-    top: 2px;
     margin-right: 5px;
   }
 
